--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>GifTastic</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <!--Link to GoogleFonts-->
-  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">s
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Lobster" rel="stylesheet">
   <!-- Link to Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
