renamed some variables

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       </div>
       <div class="clearfix visible-xs-block"></div>
       <div class="col-xs-4 col-md-3">
-        <form id="topic-form">
-          <label for="topic-input">Add a button:</label><br>
-          <input type="text" id="topic-input"><br>
-          <input id="add-Topic" type="submit" value="Submit">
+        <form>
+          <label for="user-input">Add a button:</label><br>
+          <input type="text" id="user-input"><br>
+          <input id="add-topic" type="submit" value="Submit">
           </form>
       </div>
     </div>
     <div class="row">
-      <div id="topic">
+      <div id="show-gifs">
     </div>
   </div>
 <!-- Sticky footer -->
@@ -42,8 +42,7 @@
     <p class="text-center"><img src="assets/images/Poweredby_100px-Black_VertLogo.png"></p>
     </div>
   </div>
-
-
+  <!--Javascript and JQuery tags-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="assets/javascript/app.js">
   </script>
